Fixed a few bugs

--- a/public/zookeepers.html
+++ b/public/zookeepers.html
@@ -23,7 +23,7 @@
       <h2 class="text-light col-12 col-lg-5">Our Zookeepers.</h2>
       <div class="col-12 col-lg-7 flex-row text-center justify-space-around align-center">
         <a class="btn col-12 col-md-auto mx-2" href="/">Add To Our Catalog</a>
-        <a class="btn col-12 col-md-auto mx-2" href="/animals">View Animals</a>
+        <a class="btn col-12 col-md-auto mx-2" href="animals.html">View Animals</a>
       </div>
     </section>
 
